tests/ui/traits/const-traits/issue-102985.stderr
error[E0015]: cannot call non-const closure in constants
  --> $DIR/issue-102985.rs:5:14
   |
LL |         n => n(),
   |              ^^^
   |
   = note: closures need an RFC before allowed to be called in constants
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
